test/e2e/resources/api-mapping.yaml
apiVersion: apigatewayv2.services.k8s.aws/v1alpha1
kind: APIMapping
metadata:
  name: $API_MAPPING_RES_NAME
spec:
  apiID: $API_ID
  apiMappingKey: $API_MAPPING_KEY
  stage: $STAGE_NAME
  domainName: $DOMAIN_NAME
