test/e2e/resources/httpapi-ref.yaml
apiVersion: apigatewayv2.services.k8s.aws/v1alpha1
kind: API
metadata:
  name: $REF_API_NAME
spec:
  name: $REF_API_NAME
  protocolType: HTTP
