test/e2e/resources/import_api.yaml
apiVersion: apigatewayv2.services.k8s.aws/v1alpha1
kind: API
metadata:
  name: "$IMPORT_API_NAME"
spec:
  body: '{
            "openapi": "3.0.1",
            "info": {
              "title": "$IMPORT_API_TITLE",
              "version": "v1"
            },
            "paths": {
              "/": {
                "get": {
                  "x-amazon-apigateway-integration": {
                    "uri": "http://example.com",
                    "httpMethod": "GET",
                    "type": "HTTP_PROXY",
                    "payloadFormatVersion": "1.0"
                  }
                }
              }
            },
            "components": {}
        }'
