test/e2e/resources/test-api.yaml
apiVersion: apigatewayv2.services.k8s.aws/v1alpha1
kind: API
metadata:
  name: http-api-test
spec:
  name: http-api-test
  protocolType: HTTP
